--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@ng-bootstrap/ng-bootstrap": "8.0.0",
     "@scullyio/init": "1.1.3",
     "@scullyio/ng-lib": "1.1.1",
-    "@scullyio/scully": "1.1.1",
+    "@scullyio/scully": "^1.1.1-BETA.140239",
     "@types/d3-cloud": "1.2.3",
     "@types/js-yaml": "^4.0.1",
     "angular-d3-cloud": "1.1.1",
