--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test": "npm run ng -- test --watch=false --code-coverage --browsers=ChromeHeadlessNoSandbox",
     "test:dev": "node scripts/test-dev.js",
     "ts-node": "ts-node -r tsconfig-paths/register -r dotenv/config -P node_modules/@start-bootstrap/drone-utils/dist/tsconfig-drone.json",
-    "scully": "npx scully --",
+    "scully": "npx scully --cf scully.mulder.config.ts",
     "scully:serve": "npx scully serve --",
     "scully:scan": "npx scully --scanRoutes",
     "scully:error": "npx scully --showGuessError"
@@ -33,93 +33,60 @@
   "homepage": "https://github.com/StartBootstrap/mulder#readme",
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.0.1",
-    "@angular/common": "11.0.1",
-    "@angular/compiler": "11.0.1",
-    "@angular/core": "11.0.1",
-    "@angular/forms": "11.0.1",
-    "@angular/localize": "11.0.1",
-    "@angular/platform-browser": "11.0.1",
-    "@angular/platform-browser-dynamic": "11.0.1",
-    "@angular/router": "11.0.1",
-    "@auth0/angular-jwt": "5.0.1",
-    "@fortawesome/angular-fontawesome": "0.8.0",
-    "@fortawesome/fontawesome-svg-core": "1.2.32",
-    "@fortawesome/free-brands-svg-icons": "5.15.1",
-    "@fortawesome/free-regular-svg-icons": "5.15.1",
-    "@fortawesome/free-solid-svg-icons": "5.15.1",
-    "@ng-bootstrap/ng-bootstrap": "8.0.0",
-    "@scullyio/init": "1.1.3",
-    "@scullyio/ng-lib": "1.1.1",
-    "@scullyio/scully": "^1.1.1-BETA.140239",
-    "@types/d3-cloud": "1.2.3",
-    "@types/js-yaml": "^4.0.1",
-    "angular-d3-cloud": "1.1.1",
-    "bootstrap": "^4.5.0",
-    "change-case": "4.1.1",
-    "chart.js": "2.9.4",
-    "crypto-js": "4.0.0",
-    "date-fns": "2.16.1",
-    "inputmask": "^5.0.5",
+    "@angular/animations": "^14.0.0",
+    "@angular/common": "^14.0.0",
+    "@angular/compiler": "^14.0.0",
+    "@angular/core": "^14.0.0",
+    "@angular/forms": "^14.0.0",
+    "@angular/localize": "^14.0.0",
+    "@angular/platform-browser": "^14.0.0",
+    "@angular/platform-browser-dynamic": "^14.0.0",
+    "@angular/router": "^14.0.0",
+    "@fortawesome/angular-fontawesome": "^0.11.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "@popperjs/core": "^2.10.2",
+    "@scullyio/init": "^2.1.36",
+    "@scullyio/ng-lib": "^2.1.36",
+    "@scullyio/scully": "^2.1.36",
+    "@scullyio/scully-plugin-puppeteer": "^2.1.36",
+    "@types/pako": "^2.0.0",
+    "angular-d3-cloud": "^1.1.2",
+    "bootstrap": "^5.2.0",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
-    "marked": "2.0.3",
-    "ngx-autosize": "1.8.0",
-    "ngx-markdown": "10.1.1",
-    "object-hash": "2.0.3",
-    "popper.js": "^1.16.1",
-    "prism": "4.1.2",
-    "rxjs": "6.6.3",
-    "survey-angular": "^1.8.45",
-    "survey-creator": "^1.8.45",
-    "survey-pdf": "^1.8.45",
-    "surveyjs-widgets": "^1.8.45",
-    "tslib": "2.0.3",
-    "uuid": "8.3.1",
-    "webpack-bundle-analyzer": "4.1.0",
-    "zone.js": "0.11.3"
+    "marked": "^4.1.0",
+    "ngx-autosize": "^2.0.2",
+    "ngx-markdown": "^14.0.1",
+    "rxjs": "~7.5.0",
+    "survey-angular": "^1.9.48",
+    "survey-creator": "^1.9.48",
+    "survey-pdf": "^1.9.48",
+    "surveyjs-widgets": "^1.9.48",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1100.2",
-    "@angular/cli": "11.0.2",
-    "@angular/compiler-cli": "11.0.1",
-    "@angular/language-service": "11.0.1",
-    "@google-cloud/storage": "5.5.0",
-    "@inip/static-server": "1.0.1",
-    "@start-bootstrap/drone-utils": "0.1.6",
-    "@types/chart.js": "2.9.28",
-    "@types/crypto-js": "4.0.1",
-    "@types/jasmine": "3.6.1",
-    "@types/jasminewd2": "2.0.8",
-    "@types/lodash": "^4.14.168",
-    "@types/marked": "1.2.0",
-    "@types/node": "14.14.8",
-    "@types/object-hash": "1.3.4",
-    "@types/pako": "^1.0.1",
-    "@types/prismjs": "^1.16.2",
-    "@types/showdown": "^1.9.3",
-    "@types/uuid": "8.3.0",
-    "bootstrap": "4.5.3",
-    "chokidar": "3.4.3",
-    "codelyzer": "6.0.1",
-    "concurrently": "5.3.0",
-    "cross-env": "7.0.2",
-    "jasmine-core": "3.6.0",
-    "jasmine-spec-reporter": "6.0.0",
-    "karma": "5.2.3",
-    "karma-chrome-launcher": "3.1.0",
-    "karma-coverage-istanbul-reporter": "3.0.3",
-    "karma-jasmine": "4.0.1",
-    "karma-jasmine-html-reporter": "1.5.4",
-    "prettier": "2.1.2",
-    "protractor": "7.0.0",
-    "scully-plugin-toc": "^2.0.0",
-    "shelljs": "0.8.4",
-    "showdown": "^1.9.1",
-    "ts-node": "9.0.0",
-    "tslint": "6.1.3",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "2.3.0",
-    "typescript": "4.0.5"
+    "@angular-devkit/build-angular": "^14.2.1",
+    "@angular/cli": "~14.2.1",
+    "@angular/compiler-cli": "^14.0.0",
+    "@k9n/scully-plugin-toc": "^5.0.0",
+    "@types/d3-cloud": "^1.2.5",
+    "@types/jasmine": "~4.0.0",
+    "@types/js-yaml": "^4.0.5",
+    "@types/lodash": "^4.14.184",
+    "@types/marked": "^4.0.6",
+    "@types/prismjs": "^1.26.0",
+    "jasmine-core": "~4.3.0",
+    "jsdom": "^20.0.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "typescript": "~4.7.2"
   }
 }
