--- a/package.json
+++ b/package.json
@@ -2,22 +2,11 @@
   "name": "mulder",
   "version": "1.2.0",
   "scripts": {
-    "build": "npm run ng -- build --prod --build-optimizer=true --statsJson=true",
-    "build:debug": "npm run ng -- build --prod --source-map --build-optimizer=true --statsJson=true",
-    "bundle-report": "webpack-bundle-analyzer dist/mulder/stats-es2015.json",
-    "docker:build": "node scripts/docker/docker-build.js",
-    "docker:run": "node scripts/docker/docker-run.js",
-    "e2e": "npm run ng -- e2e",
-    "e2e:running": "npm run ng -- e2e --dev-server-target=",
-    "lint:fix": "tslint -p . -c tslint.json --fix",
-    "lint": "tslint -p . -c tslint.json",
-    "ng": "cross-env NODE_OPTIONS=--max_old_space_size=2048 ./node_modules/.bin/ng",
-    "serve": "static-server dist/mulder",
-    "serve:coverage": "static-server ./coverage/mulder 9753",
-    "start": "node scripts/start.js",
-    "test": "npm run ng -- test --watch=false --code-coverage --browsers=ChromeHeadlessNoSandbox",
-    "test:dev": "node scripts/test-dev.js",
-    "ts-node": "ts-node -r tsconfig-paths/register -r dotenv/config -P node_modules/@start-bootstrap/drone-utils/dist/tsconfig-drone.json",
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test",
     "scully": "npx scully --cf scully.mulder.config.ts",
     "scully:serve": "npx scully serve --",
     "scully:scan": "npx scully --scanRoutes",
